        + On-the-fly empty hostname update if resolved (if parameter set for subnet and enabled globally);
        + Added this infor to tools > scanned networks;
    + Added custom_ prefix to custom field names to avoid duplication with custom fields (#1387);
    + Added option to hide IP requests for unauthenticated users on login page (#1394);

    Translations:
    ----------------------------
    + French translation updated to verson 1.3;
    + German translation updated to verson 1.3;

    Bugfixes:
    ----------------------------
    + Fixed RACK images not displayed if not root location (#1204);
    + Fixed import gateway ip (#1240);
    + Fixed JSON_UNESCAPED_UNICODE for PHP 5.3 (#1135, #1245);
    + Rename class Thread to PingThread to avoid naming conflict with pthreads Thread class (#1254);
    + Fixed custom fields integer on subnet (#1266);
    + Fixed Import Ip-adress doesnt update location (#1284);
    + Fixed json_error for logo upload (#1256);
    + Fixed CSRF error when moving orphaned addresses (#1303);
    + Fixed VRF fetching via API by Id;
    + Fixed map issues when quotes are in name/description (#1384);
    + Fixed item not removed from NAT when deleted (#1378);
    + Fixed Error when error_reporting = E_ALL about strict standards when importing IP addresses (#1372);
    + Fixed Apostrophe errors in text custom fields (#1375);

    Security Fixes:
    ----------------------------
    + Fixed XSS issues (#1403);

== 1.3

    New features:
    ------------
    + Multicast module (RFC1112, RFC2464) with IP to MAC mapping and multicast networks overview;
    + Threshold module for subnets;
    + Racks module (Rack drawing) for devices;
    + Address linking by selected field;
    + Custom logo for site and mails;
    + PSTN number management module;
    + SNMP module:
        + Subnets discovery from route table (all subnets, nested subnets, add new subnet);
        + Hosts discovery scans via ARP check/interface check;