@@ -12,6 +12,7 @@ require( dirname(__FILE__) . '/../../../functions/functions.php');
 $Database 	= new Database_PDO;
 $User 		= new User ($Database);
 $Admin	 	= new Admin ($Database);
+$Tools	 	= new Tools ($Database);
 $Result 	= new Result ();
 
 # verify that user is logged in
@@ -40,10 +41,38 @@ if($_POST['action']=="add") {
 if($Admin->fetch_object("userGroups", "g_name", $_POST['g_name'])!==false)	{ $Result->show("danger", _('Group already exists')."!", true); }
 }
 
+# fetch custom fields
+$custom = $Tools->fetch_custom_fields('userGroups');
+if(sizeof($custom) > 0) {
+	foreach($custom as $myField) {
+
+		//replace possible ___ back to spaces
+		$myField['nameTest'] = str_replace(" ", "___", $myField['name']);
+		if(isset($_POST[$myField['nameTest']])) { $_POST[$myField['name']] = $_POST[$myField['nameTest']];}
+
+		//booleans can be only 0 and 1!
+		if($myField['type']=="tinyint(1)") {
+			if($_POST[$myField['name']]>1) {
+				$_POST[$myField['name']] = 0;
+			}
+		}
+		//not null!
+		if($myField['Null']=="NO" && strlen($_POST[$myField['name']])==0) { $Result->show("danger", $myField['name'].'" can not be empty!', true); }
+
+		# save to update array
+		$update[$myField['name']] = $_POST[$myField['nameTest']];
+	}
+}
+
 # create array of values for modification
 $values = array("g_id"=>@$_POST['g_id'],
 				"g_name"=>$_POST['g_name'],
 				"g_desc"=>@$_POST['g_desc']);
+
+# custom fields
+if(isset($update)) {
+	$values = array_merge($values, $update);
+}
 
 /* try to execute */
 if(!$Admin->object_modify("userGroups", $_POST['action'], "g_id", $values)) { $Result->show("danger",  _("Group $_POST[action] error")."!", false); }
